SET(EXAMPLE_NAME "Vulkan-glTF-PBR")
file(GLOB SOURCE *.cpp ${BASE_HEADERS})
file(GLOB SHADERS "../data/shaders/*.vert" "../data/shaders/*.frag" "../data/shaders/*.comp" "../data/shaders/*.geom" "../data/shaders/*.tesc" "../data/shaders/*.tese")
source_group("Shaders" FILES ${SHADERS})
if(WIN32)
	add_executable(${EXAMPLE_NAME} WIN32 ${MAIN_CPP} ${SOURCE} ${SHADERS})
	target_include_directories(${EXAMPLE_NAME} PRIVATE ${BULLET_INCLUDE_DIR})
	target_link_libraries(${EXAMPLE_NAME} base ${Vulkan_LIBRARY} ${WINLIBS} ${BULLET_LIBRARIES})
else(WIN32)
	add_executable(${EXAMPLE_NAME} ${MAIN_CPP} ${SOURCE} ${SHADERS})
	target_include_directories(${EXAMPLE_NAME} PRIVATE ${BULLET_INCLUDE_DIR})
	target_link_libraries(${EXAMPLE_NAME} base ${BULLET_LIBRARIES})
endif(WIN32)
if(RESOURCE_INSTALL_DIR)
	install(TARGETS ${EXAMPLE_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()
